--- a/app/components/Benefits.module.css
+++ b/app/components/Benefits.module.css
@@ -49,7 +49,23 @@
         padding: 4rem 1.5rem;
     }
 
+    .header p {
+        text-align: center;
+    }
+
     .item {
         padding: 1.25rem;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .icon {
+        margin-top: 0;
+        margin-bottom: 0.5rem;
+    }
+
+    .text {
+        text-align: justify;
     }
 }
