--- a/app/components/CTASection.module.css
+++ b/app/components/CTASection.module.css
@@ -47,6 +47,8 @@
     color: rgba(255, 255, 255, 0.8);
     margin-bottom: 2.5rem;
     font-weight: 300;
+    text-align: center;
+    text-align-last: center;
 }
 
 .ctaWrapper {
