--- a/app/components/Introduction.module.css
+++ b/app/components/Introduction.module.css
@@ -67,6 +67,8 @@
     max-width: 850px;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+    text-align-last: center;
 }
 
 .description strong {
@@ -184,5 +186,17 @@
     100% {
         opacity: 0.6;
         transform: rotate(90deg) translateX(0);
+    }
+}
+
+@media (max-width: 320px) {
+
+    .question,
+    .title {
+        text-align: center !important;
+    }
+
+    .description {
+        text-align: justify !important;
     }
 }
