Refine Pricing layout and Footer spacing

--- a/app/components/Facilitator.module.css
+++ b/app/components/Facilitator.module.css
@@ -179,7 +179,7 @@
     }
 
     .credItem {
-        justify-content: center;
+        justify-content: flex-start;
         text-align: left;
     }
 
