--- a/app/components/WhatsAppBubble.module.css
+++ b/app/components/WhatsAppBubble.module.css
@@ -1,6 +1,7 @@
 .bubble {
     position: fixed;
-    bottom: 30px;
+    bottom: 150px;
+    /* Positioned towards center */
     right: 30px;
     background-color: #25D366;
     color: white;
@@ -49,7 +50,8 @@
 
 @media (max-width: 768px) {
     .bubble {
-        bottom: 20px;
+        bottom: 120px;
+        /* Positioned towards center on mobile */
         right: 20px;
         width: 50px;
         height: 50px;
