--- a/app/components/Footer.module.css
+++ b/app/components/Footer.module.css
@@ -186,8 +186,8 @@
     }
 
     .ctaButton {
-        font-size: 0.85rem !important;
-        padding: 1rem 0.75rem !important;
+        font-size: 1rem !important;
+        padding: 1rem !important;
         white-space: nowrap !important;
         width: auto;
         min-width: 280px;
