--- a/app/components/Footer.module.css
+++ b/app/components/Footer.module.css
@@ -236,6 +236,14 @@
         grid-template-columns: 1fr;
         gap: 2rem;
     }
+
+    .warningText {
+        line-height: 1.35 !important;
+        text-align: justify !important;
+        /* text-align-last: center; */
+        /* Optional: decide if last line should be center or left */
+        font-size: 0.85rem !important;
+    }
 }
 
 @media (max-width: 320px) {
