--- a/app/components/PainPoints.module.css
+++ b/app/components/PainPoints.module.css
@@ -94,6 +94,7 @@
     font-size: 0.95rem;
     text-align: center;
     text-align-last: center;
+    white-space: pre-line;
 }
 
 @media (max-width: 768px) {
