--- a/app/components/WhatsAppBubble.module.css
+++ b/app/components/WhatsAppBubble.module.css
@@ -50,8 +50,8 @@
 
 @media (max-width: 768px) {
     .bubble {
-        bottom: 170px;
-        /* Positioned higher above CTA on mobile */
+        bottom: 30px;
+        /* Standard position */
         right: 20px;
         width: 50px;
         height: 50px;
